# sistema-e-gerenciament-de-banco-de-dados-trab1-hashindex

./: CMakeLists.txt
data/buckets/: 0.txt  1.txt  2.txt  3.txt  4.txt  6.txt  7.txt
data/indices/: indice.txt
data/io/: out.txt
depreciado/: hashtable.cpp  hashtable.h  linkedinlist.h
includes/: Bucket.h  HashTable.h  bplustree.h  hashtable.h  linkedinlist.h
src/: Bucket.cpp  HashTable.cpp  bplustree.cpp  hashtable.cpp  linkedinlist.cpp  main.cpp
